<resources>
    <string name="app_name" translatable="false">Fixed</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_with">SignUp With</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_model">Car Model</string>
    <string name="language">Language:</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="item_added_to_cart">Added To Cart</string>
    <string name="settings">Settings</string>
    <string name="userName">Mohamed Hani</string>
    <string name="account_settings">Account Settings</string>
    <string name="requests">Requests</string>
    <string name="carType">Lancer Puma</string>
    <string name="order">Order:</string>
    <string name="orderName">Car Screen Protector From Samsung</string>
    <string name="send_order">Send Order</string>
    <string name="totalPrice">100 L.E</string>
    <string name="price">Total Price:</string>
    <string name="sign_out">Sign Out</string>
    =======
    <string name="productDetails">Car Screen Protector</string>
    <string name="CategoryOfProduct">Screen Protectors</string>
    <string name="ProductName">Car Screen Protector From Huwawi</string>
    <string name="ProductDetails" translatable="false">My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed My name is mohamed</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="ProductPrice">100 L.E</string>
    <string name="done">Done</string>
    <string name="enter_your_email_to_forget_your_password">Enter Your Email To Forget Your Password:</string>
    <string name="we_will_send_you_confirmation_email_to_forget_your_password">We Will Send You Confirmation Email To Forget Your Password</string>
    <string name="send_confirmation_email">Send Confirmation Email</string>
    <string name="email_sent_successfully">Email Sent Successfully!</string>
    <string name="confirmation_email_sent_to_your_account_successfuly">Confirmation Email Sent To Your Account Successfuly.</string>
    <string name="resend_email" translatable="false">Resend Email</string>
    <string name="et_product_name_hint">Enter Name</string>

    >>>>>>> Stashed changes
    <string-array name="language_spinner">
        <item>English</item>
        <item>العربية</item>
    </string-array>

    <!-- Admin Main  -->
    <string name="tv_add_product">Add New</string>
    <string name="tv_request">Send Request</string>


    <!-- Admin Add Product  -->
    <string name="et_product_model_hint">Enter Model</string>
    <string name="et_product_description_hint">Enter Description</string>
    <string name="et_product_price_hint">Enter Price</string>
    <string name="button_product_submit">Submit</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="cart">Cart</string>
    <string name="checkout">CheckOut</string>
    <string name="old_password">Old Password</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_card">Add to Card</string>
    <string name="or">Or</string>
    <string name="add">Add</string>
    <string name="thank_you_for_ordering">Thank You For Ordering!</string>
    <string name="your_order_has_been_sent_and_we_will_contact_you_as_soon_as_possible">Your Order Has Been Sent And We Will Contact You As Soon As Possible</string>
    <string name="please_sign_in_to_access_this_content">Please Sign In To Access Settings</string>
    <string name="add_new_category">Add New Category</string>
    <string name="orders">Orders</string>
    <string name="internal_category">Add Subcategory</string>
    <string name="add_new_product">Add New Product</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_category_content_discripsion">Enter Category Content Description</string>
    <string name="edit_product">Edit Product</string>
    <string name="enter_subcategory_name">Enter Subcategory Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="loading">Loading...</string>
    <string name="try_again">Try Again</string>
    <string name="we_re_please_connect_to_internet_and_try_again">We\'re Sorry Please Connect To Internet And Try Again</string>
    <string name="please_add_category">Please Add Category</string>
    <string name="please_add_model">Please Add Subcategory</string>
    <string name="enter_product_stock">Enter Product Stock</string>
    <string name="sold_out">Sold Out</string>
    <string name="item_add_to_cart">" Added To Cart"</string>
    <string name="total">Total:</string>
    <string name="this_item_already_in_the_cart">This Item Already In The Cart</string>
    <string name="no_more_stock">No More Stock</string>
    <string name="order_price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="order_number">Order Number:</string>
    <string name="order_model">Order Model:</string>
    <string name="delete_product">Delete Product</string>
    <string name="please_add_subcategory">Please Add Subcategory</string>
    <string name="please_add_product">Please Add Product</string>
    <string name="to_change_app_language_please_change_your_phone_language_or_update_your_android_version">To Change App Language Please Change Your Phone Language Or Update Your Android Version</string>
    <string name="please_enter_full_data">Please Enter Full Data</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_subcategory">Delete Subcategory</string>
    <string name="next">Next</string>
    <string name="new_orders">New Orders</string>
    <string name="in_progress_orders">In Progress Orders</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="shipped_order">Shipped Order</string>
    <string name="my_orders">My Orders</string>
</resources>