<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainDarkGreen">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/productDetails"
                android:textColor="#fff"
                android:textSize="22sp" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/iv_product"
            android:src="@drawable/profile"
            />

        <TextView
            android:id="@+id/tv_productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProductName"
            android:textColor="#000"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CategoryOfProduct"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
        <TextView
            android:layout_margin="15dp"
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProductDetails"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="#000"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/btn_addToCart"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ProductPrice"
                android:textSize="20sp"
                android:textColor="@color/mainBlue"
                android:textStyle="bold"

                />

        </LinearLayout>











    </LinearLayout>

</ScrollView>