<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forget_password_fragment_framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ForgetPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enter_your_email_to_forget_your_password"
            android:textColor="@color/mainDarkGreen"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we_will_send_you_confirmation_email_to_forget_your_password"
            android:textColor="#000"
            android:textSize="16sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/forget_password_email_edittext"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background_pink"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/send_confirmation_email_button"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:text="@string/send_confirmation_email"
            android:textColor="#FFF" />
    </LinearLayout>

</FrameLayout>