<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/app_icon" />

        <EditText
            android:id="@+id/enterYourEmailEdittext"
            android:layout_width="217dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background_blue"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/mainHintColor" />

        <EditText
            android:id="@+id/enterYourPasswordEdittext"
            android:layout_width="217dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_blue"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/mainHintColor" />

        <TextView
            android:id="@+id/forgetPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/mainPink"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="158dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="#FFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="50dp"
                android:layout_height="1.5dp"
                android:background="#606060" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Or"
                android:textColor="@color/mainDarkGreen"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="50dp"
                android:layout_height="1.5dp"
                android:background="#4A4A4A" />
        </LinearLayout>

        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_account"
            android:textColor="@color/mainBlue"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>