<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/product_name_to_search"
            style="@style/AdminAddET"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_pink"
            android:gravity="center"
            android:hint="Enter Product Name" />

        <Button
            android:id="@+id/search_to_edit"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/search"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <View
                android:id="@+id/view5"
                android:layout_width="280dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/border_image_rectangle" />

            <ImageView
                android:id="@+id/edit_post_image"
                android:layout_width="270dp"
                android:layout_height="110dp"
                android:layout_gravity="center" />

            <View
                android:id="@+id/view6"
                android:layout_width="270dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="@drawable/shaded_image_rectangle" />

            <ImageView
                android:id="@+id/pick_user_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/add_photo_icon" />

        </FrameLayout>

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/AdminAddET"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/product_image"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_pink"
            android:gravity="center"
            android:hint="@string/et_product_name_hint" />

        <EditText
            android:id="@+id/edit_product_model"
            style="@style/AdminAddET"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/product_name"
            android:background="@drawable/edittext_background_pink"
            android:gravity="center"
            android:hint="@string/et_product_model_hint" />

        <EditText
            android:id="@+id/edit_product_description"
            style="@style/AdminAddET"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/product_model"
            android:background="@drawable/edittext_background_pink"
            android:gravity="start|top"
            android:hint="@string/et_product_description_hint"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/AdminAddET"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/product_description"
            android:background="@drawable/edittext_background_pink"
            android:gravity="center"
            android:hint="@string/et_product_price_hint" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/close_admins"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start|top"
        android:layout_margin="10dp"
        android:src="@drawable/close" />
</FrameLayout>